--- a/404.html
+++ b/404.html
@@ -16,8 +16,31 @@
 </head>
 
 <body>
-  
-  <h1>Hockey Fights</h1>
+  <div class='ui page grid'>
+    <div class='sixteen column'>
+      <div id='top'></div>
+        <div id='header'>
+          <img src="img/hockeyfights_logo.gif">
+          <div class='nav'>
+            <ul class="ui fluid eleven item menu">
+              <li class='hover item'>  <a href="#" id='day'>Home</a>  </li>
+              <li class='item'>   <a href="#" id='night'>Fight Log</a>  </li>
+               <li class='item'>   <a href="#" id='night'>Players</a>  </li>
+                <li class='item'>   <a href="#" id='night'>Teams</a>  </li>
+                 <li class='item'>   <a href="#" id='night'>Leagues</a>  </li>
+                  <li class='item'>   <a href="#" id='night'>Videos</a>  </li>
+                   <li class='item'>   <a href="#" id='night'>News</a>  </li>
+                    <li class='item'>   <a href="#" id='night'>Community</a>  </li>
+                     <li class='item'>   <a href="#" id='night'>Game</a>  </li>
+                      <li class='item'>   <a href="#" id='night'>Blog</a>  </li>
+                       <li class='item'>   <a href="#" id='night'>Store</a>  </li>
+            </ul>
+          </div>  
+        </div>
+    </div>
+  </div>
+
+
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/semantic.js"></script>
