Add 404 and jQuery plugin

--- a/404.html
+++ b/404.html
@@ -16,8 +16,13 @@
 </head>
 
 <body>
+
+
   <div class='ui page grid'>
     <div class='sixteen column'>
+
+<!--      Nav      -->  
+
       <div id='top'></div>
         <div id='header'>
           <img src="img/hockeyfights_logo.gif">
@@ -37,13 +42,42 @@
             </ul>
           </div>  
         </div>
+
     </div>
   </div>
 
+<!--     Content     -->
+ <div class='ui page grid'>
+    <div class='three column'>
+
+
+      <div class='ko'>
+          <div class='info'>
+            <h1> 404 </h1>
+            <p>Ouch! Page Not Found!</p>
+          </div> 
+        <img class='tagline' src="img/knockout.png">
+       
+      </div>
+
+
+
+
+<!---       Footer      -->
+
+    <div class='footer'>
+
+    </div>
+
+  </div>
+</div>
+
+    
 
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/semantic.js"></script>
+   <script src="js/foggy.js"></script>
   <script src="js/scripts.js"></script>
 
 </body>
