--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <title>DESN 378 Website Starter</title>
+  <title>Hockey Fights</title>
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
@@ -16,12 +16,51 @@
 </head>
 
 <body>
+
+    <div class='ui page grid'>
+    <div class='sixteen column'>
+
+<!--      Nav      -->  
+
+      <div id='top'></div>
+        <div id='header'>
+          <img src="img/hockeyfights_logo.gif">
+          <div class='nav'>
+            <ul class="ui fluid eleven item menu">
+              <li class='hover item'>  <a href="#" id='day'>Home</a>  </li>
+              <li class='item'>   <a href="#" id='night'>Fight Log</a>  </li>
+               <li class='item'>   <a href="#" id='night'>Players</a>  </li>
+                <li class='item'>   <a href="#" id='night'>Teams</a>  </li>
+                 <li class='item'>   <a href="#" id='night'>Leagues</a>  </li>
+                  <li class='item'>   <a href="#" id='night'>Videos</a>  </li>
+                   <li class='item'>   <a href="#" id='night'>News</a>  </li>
+                    <li class='item'>   <a href="#" id='night'>Community</a>  </li>
+                     <li class='item'>   <a href="#" id='night'>Game</a>  </li>
+                      <li class='item'>   <a href="#" id='night'>Blog</a>  </li>
+                       <li class='item'>   <a href="#" id='night'>Store</a>  </li>
+            </ul>
+          </div>  
+        </div>
+
+    </div>
+  </div>
   
-  <h1>378 Website Starter</h1>
+
+<!---       Footer      -->
+
+    <div class='footer'>
+
+    </div>
+
+  </div>
+</div>
+
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/semantic.js"></script>
   <script src="js/scripts.js"></script>
+   <script src="js/foggy.js"></script>
+  <script src="js/semantic.js"></script>
+ 
 
 </body>
 </html>
